[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/pause-menu/pause-menu.gd" type="Script" id=1]
[ext_resource path="res://assets/ButtonsV3/ButtonUp.png" type="Texture" id=2]
[ext_resource path="res://ui/sound-interface/sound-interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/VT323/VT323-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ButtonsV3/ButtonDown.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = ExtResource( 4 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Control/Center"]
margin_left = 104.0
margin_top = 156.0
margin_right = 616.0
margin_bottom = 1124.0
size_flags_stretch_ratio = 3.13
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="Control/Center/VBox"]
margin_right = 512.0
margin_bottom = 256.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/Center/VBox/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Center/VBox/Continue/CenterContainer"]
margin_left = 52.0
margin_top = 63.0
margin_right = 460.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="TextureButton" parent="Control/Center/VBox"]
margin_top = 356.0
margin_right = 512.0
margin_bottom = 612.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/Center/VBox/Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Center/VBox/Restart/CenterContainer"]
margin_left = 77.0
margin_top = 63.0
margin_right = 434.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="TextureButton" parent="Control/Center/VBox"]
margin_top = 712.0
margin_right = 512.0
margin_bottom = 968.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/Center/VBox/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Center/VBox/MainMenu/CenterContainer"]
margin_left = 154.0
margin_top = 63.0
margin_right = 358.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" parent="Control" instance=ExtResource( 3 )]

[connection signal="pressed" from="Control/Center/VBox/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Control/Center/VBox/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/Center/VBox/MainMenu" to="." method="_on_MainMenu_pressed"]
